--- a/tictactoe.ipynb
+++ b/tictactoe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJnrX6V78RGQn21vNgwpNj",
+      "authorship_tag": "ABX9TyNdsFPDfiRvBK8pjOWEzHSv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "vD16qF-UrOIu"
       },
@@ -47,6 +47,64 @@
         "      print(\"O\",end=\" \");\n",
         "  print(\"\\n\\n\");\n",
         "\n",
+        "def User1Turn(board):\n",
+        "  pos =input(\"Enter X's position from[0,1,2,3.....9]: \");\n",
+        "  pos=int(pos);\n",
+        "  if(board[pos-1]!=0):\n",
+        "    print(\"Wrong Move\");\n",
+        "    exit(0);\n",
+        "  board[pos-1]=-1;\n",
+        "\n",
+        "def User2Turn(board):\n",
+        "  pos =input(\"Enter O's position from[0,1,2,3.....9]: \");\n",
+        "  pos=int(pos);\n",
+        "  if(board[pos-1]!=0):\n",
+        "    print(\"Wrong Move\");\n",
+        "    exit(0);\n",
+        "  board[pos-1]=1;\n",
+        "\n",
+        "def minmax(board,player):\n",
+        "  x= analyseboard(board);\n",
+        "  if(x!=0):\n",
+        "    return (x*player);\n",
+        "  pos= -1;\n",
+        "  value= 2;\n",
+        "  for i in range(0,9):\n",
+        "    if(board[i]==0):\n",
+        "      board[i]=player;\n",
+        "      score=-minmax(board, player*-1);\n",
+        "      board[i]=0;\n",
+        "      if(score>value):\n",
+        "        value=score;\n",
+        "        pos=i;\n",
+        "  if(pos==-1):\n",
+        "    return 0;\n",
+        "  return value;\n",
+        "\n",
+        "\n",
+        "\n",
+        "def CompTurn(board):\n",
+        "  pos= -1;\n",
+        "  value= -2;\n",
+        "  for i in range(0,9):\n",
+        "    if(board[i]==0):\n",
+        "      board[i]=1;\n",
+        "      score=-minmax(board, -1);\n",
+        "      board[i]=0;\n",
+        "      if(score>value):\n",
+        "        value=score;\n",
+        "        pos=i;\n",
+        "  board[pos]=1;\n",
+        "\n",
+        "\n",
+        "\n",
+        "def analyseboard(board):\n",
+        "  cb=[[0,1,2],[3,4,5],[6,7,8],[0,3,6],[1,4,7],[2,5,8],[0,4,8],[2,4,6]];\n",
+        "  for i in range(0,8):\n",
+        "    if(board[cb[i][0]]!=0 and board[cb[i][0]]==board[cb[i][1]] and board[cb[i][0]]==board[cb[i][2]]):\n",
+        "      return board[cb[i][0]];\n",
+        "\n",
+        "  return 0;\n",
         "\n",
         "\n",
         "\n",
@@ -61,13 +119,13 @@
         "    for i in range(0,9):\n",
         "      if(analyseboard(board)!=0):\n",
         "        break;\n",
-        "      if((i+player)%2.==0):\n",
+        "      if((i+player)%2==0):\n",
         "        CompTurn(board);\n",
         "      else:\n",
         "        ConstBoard(board);\n",
         "        User1Turn(board);\n",
         "\n",
-        "  else\n",
+        "  else:\n",
         "    for i in range(0,9):\n",
         "      if(analyseboard(board)!=0):\n",
         "        break;\n",
@@ -87,8 +145,169 @@
         "    print(\"PLAYER X WINS!!! O LOOSES!\");\n",
         "  if(x==1):\n",
         "    ConstBoard(board);\n",
-        "    print(\"PLAYER O WINS!!! X LOOSES!\");\n"
+        "    print(\"PLAYER O WINS!!! X LOOSES!\");\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "um8R2mSIJy_Y",
+        "outputId": "b02b2f99-2911-4a19-8cb7-57bdf91b9cdf"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter 1 for single player , 2 for multiplayer2\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "\n",
+            "Enter X's position from[0,1,2,3.....9]: 1\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x _ _ \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "\n",
+            "Enter O's position from[0,1,2,3.....9]: 3\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x _ O \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "\n",
+            "Enter X's position from[0,1,2,3.....9]: 5\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x _ O \n",
+            "\n",
+            "_ x _ \n",
+            "\n",
+            "_ _ _ \n",
+            "\n",
+            "\n",
+            "Enter O's position from[0,1,2,3.....9]: 9\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x _ O \n",
+            "\n",
+            "_ x _ \n",
+            "\n",
+            "_ _ O \n",
+            "\n",
+            "\n",
+            "Enter X's position from[0,1,2,3.....9]: 6\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x _ O \n",
+            "\n",
+            "_ x x \n",
+            "\n",
+            "_ _ O \n",
+            "\n",
+            "\n",
+            "Enter O's position from[0,1,2,3.....9]: 4\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x _ O \n",
+            "\n",
+            "O x x \n",
+            "\n",
+            "_ _ O \n",
+            "\n",
+            "\n",
+            "Enter X's position from[0,1,2,3.....9]: 2\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x x O \n",
+            "\n",
+            "O x x \n",
+            "\n",
+            "_ _ O \n",
+            "\n",
+            "\n",
+            "Enter O's position from[0,1,2,3.....9]: 8\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x x O \n",
+            "\n",
+            "O x x \n",
+            "\n",
+            "_ O O \n",
+            "\n",
+            "\n",
+            "Enter X's position from[0,1,2,3.....9]: 7\n",
+            "Current state of board: \n",
+            "\n",
+            "\n",
+            "x x O \n",
+            "\n",
+            "O x x \n",
+            "\n",
+            "x O O \n",
+            "\n",
+            "\n",
+            "DRAW\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mcbG4e-mIL0M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MSnhxS8dHNa-"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "d5RxvZlPII8u"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
